fixed layout issues with desktop page sections

--- a/src/components/UI/Form.module.css
+++ b/src/components/UI/Form.module.css
@@ -43,6 +43,10 @@
     margin-bottom: 0.8rem;
   }
 
+  .form__control-input {
+    width: 45rem;
+  }
+
   .error {
     font-size: 1.4rem;
   }
