--- a/src/components/UI/InputSwitch.module.css
+++ b/src/components/UI/InputSwitch.module.css
@@ -74,3 +74,10 @@ input:checked + .slider:before {
   font-weight: 500;
   color: var(--grey);
 }
+
+@media screen and (min-width: 760px) {
+  .input__switch-container {
+    max-width: 45rem;
+    margin: 2.4rem 0;
+  }
+}
