--- a/src/components/pages/Addons.module.css
+++ b/src/components/pages/Addons.module.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 760px) {
   .addon-section {
-    margin-left: 35rem;
+    margin-left: 31rem;
   }
 }
