--- a/src/components/pages/FinishingUp.module.css
+++ b/src/components/pages/FinishingUp.module.css
@@ -90,6 +90,6 @@
   .finish-section {
     min-width: 45rem;
     min-height: 22.8rem;
-    margin-left: 37rem;
+    margin-left: 31rem;
   }
 }
