--- a/src/components/pages/PersonalInfo.module.css
+++ b/src/components/pages/PersonalInfo.module.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 760px) {
   .personal-info__section {
-    margin-left: 30rem;
+    margin-left: 31rem;
   }
 }
