--- a/src/components/pages/RootLayout.module.css
+++ b/src/components/pages/RootLayout.module.css
@@ -22,9 +22,9 @@
   }
 
   .footer {
-    max-width: 45rem;
+    /* max-width: 45rem; */
     position: absolute;
-    right: 10%;
+    right: 0;
     bottom: 2%;
   }
 
