--- a/src/components/pages/ThankYou.module.css
+++ b/src/components/pages/ThankYou.module.css
@@ -32,7 +32,7 @@
   .thankyou-section {
     max-width: 45rem;
     min-height: 23.8rem;
-    margin-left: 28rem;
+    margin-left: 31rem;
   }
 
   .thanks {
