--- a/src/components/pages/YourPlan.module.css
+++ b/src/components/pages/YourPlan.module.css
@@ -1,10 +1,10 @@
 @media screen and (min-width: 760px) {
   .plan-button__section {
-    margin-left: 35rem;
+    margin-left: 31rem;
   }
   .plan-button__container {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     width: 48.8rem;
   }
 }
