--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ input[type="checkbox"] {
 @media screen and (min-width: 769px) {
   h1 {
     font-size: 3.2rem;
-    margin: 0 0 1.1rem 5rem;
+    margin: 0 0 1.1rem 0;
   }
 
   p {
